# efika-io

./: CMakeLists.txt  io-config.cmake.in
.github/workflows/: cmake.yml
cmake/: Dependencies.cmake
include/efika/: io.h
src/: CMakeLists.txt  cluto.c  dimacs.c  getline.c  metis.c  mm.c  snap.c  ugraph.c
src/include/efika/io/: getline.h  rename.h
